src/client/assets/styles/components/_search.scss
.c-search {
  border-radius: 15px;
  max-width: 30rem;
  margin: 1rem 0;
  background-color: $col-gray-light;
  box-shadow: 3px 3px 3px 2px rgba(#000, 0.2);
  display: flex;
  justify-content: space-between;
  padding: 0.2rem 0.5rem 0.2rem 1rem;

  > * {
    background-color: $col-gray-light;
    color: $col-black;
    border: none;
  }

  &__input {
    flex-grow: 1;
    height: 1.5rem;

    &::placeholder {
      color: $col-gray-medium;
    }
  }

  &__btn {
    padding: 0 0.5rem;
  }
}

